2011-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: filter stderr make result strange,
			       filter exit_code != 0 make it fail.


2011-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Do not rename gnutar-list if record is not
	  set.

2011-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/tapefile.h (struct tape_s): Add blocksize.
	* server-src/tapefile.c: Print and parse blocksize in tapelist file.
	* perl/Amanda/Tapelist.swg: Print and parse blocksize in tapelist file.
	* perl/Amanda/Taper/Scribe.pm: Add blocksize argument to add_tapelabel.
	* server-src/amlabel.pl: Add blocksize argument to add_tapelabel.
	* installcheck/Amanda_Tapelist.pl: Fix for tapelist file format.
	* installcheck/amlabel.pl: Fix for tapelist file format.

2011-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.h (struct Device): Add header_block_size.
	* device-src/null-device.c, device-src/rait-device.c,
	  device-src/s3-device.c, device-src/tape-device.c,
	  device-src/vfs-device.c: Set header_block_size.
	* perl/Amanda/Device.swg: Swig header_block_size.

2011-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Device.pl: Fix number of skipped test for S3.

2011-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Print why a disk is skip if DS_NOINC.

2011-08-30  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Device.pl: Check invalid location on s3 device.

2011-08-30  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c (s3_is_bucket_exists): Do not retry if bucket do
	  not exists.

2011-08-30  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c (s3_is_bucket_exists): New function to check if a
	  bucket exists.
	* device-src/s3.h (s3_is_bucket_exists): Prototype.
	* device-src/s3-device.c: Call s3_is_bucket_exists before
	  s3_make_bucket.

2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>